[gd_scene load_steps=47 format=3 uid="uid://ckbitpcqxs5ao"]

[ext_resource type="Script" path="res://scripts/game_control.gd" id="1_2axsc"]
[ext_resource type="Script" path="res://scripts/game_camera.gd" id="1_we6ai"]
[ext_resource type="Script" path="res://ai/ai_control.gd" id="2_w08l3"]
[ext_resource type="PackedScene" uid="uid://cpgxwqs1hap0p" path="res://objects/particle_number.tscn" id="4_s5wqb"]
[ext_resource type="Texture2D" uid="uid://jb8ugdvfra1h" path="res://sprites/current_power.png" id="6_duti3"]
[ext_resource type="Shader" path="res://scripts/shader_ui_button.gdshader" id="6_hw6d1"]
[ext_resource type="Texture2D" uid="uid://b5wmm400auwgm" path="res://sprites/pause_button.png" id="7_6wsra"]
[ext_resource type="Texture2D" uid="uid://cate3b6eswfv2" path="res://sprites/end_turn.png" id="7_7ft3b"]
[ext_resource type="Texture2D" uid="uid://btkm6plodij7y" path="res://sprites/advance_phase_action.png" id="7_biihl"]
[ext_resource type="StyleBox" uid="uid://l8vkqqi4prkx" path="res://styles/style_label_normal_box.tres" id="7_r48wm"]
[ext_resource type="Texture2D" uid="uid://cfysyu40pa2b1" path="res://sprites/advance_phase_action_pressed.png" id="8_2xsaj"]
[ext_resource type="Texture2D" uid="uid://3uf3acu0wy42" path="res://sprites/forfeit.png" id="8_chkrk"]
[ext_resource type="PackedScene" uid="uid://dt0hijbeupo" path="res://objects/command_callout.tscn" id="8_gv3dv"]
[ext_resource type="Texture2D" uid="uid://dsmqlawfghh0" path="res://sprites/mask_advance_phase_action.png" id="8_mwboh"]
[ext_resource type="Script" path="res://scripts/alignment_list.gd" id="8_y476x"]
[ext_resource type="Texture2D" uid="uid://iax63f215c2f" path="res://sprites/mask_end_turn.png" id="9_63gm5"]
[ext_resource type="Texture2D" uid="uid://b83fxlgeqmrwf" path="res://sprites/turn_order_players.png" id="9_gke1b"]
[ext_resource type="Texture2D" uid="uid://fpyi1jb6io6d" path="res://sprites/advance_phase_mobilize.png" id="9_onswv"]
[ext_resource type="Texture2D" uid="uid://c2duva1ycjs8u" path="res://sprites/city.png" id="10_5d75i"]
[ext_resource type="Texture2D" uid="uid://dqt3bjx5tp2eh" path="res://sprites/advance_phase_mobilize_pressed.png" id="10_en7qc"]
[ext_resource type="Texture2D" uid="uid://bh0sjq1vbftjk" path="res://sprites/mask_forfeit.png" id="11_1122e"]
[ext_resource type="Texture2D" uid="uid://bmuju6jsfeg28" path="res://sprites/mask_advance_phase_mobilize.png" id="11_ay5pf"]
[ext_resource type="Texture2D" uid="uid://66jp7txq175w" path="res://sprites/capital.png" id="11_i48c4"]
[ext_resource type="Texture2D" uid="uid://bht6umkfovrvf" path="res://sprites/exit.png" id="12_st2cf"]
[ext_resource type="Texture2D" uid="uid://cdp7iv8w22bhk" path="res://sprites/end_turn_pressed.png" id="13_ac8mv"]
[ext_resource type="Texture2D" uid="uid://o3quctecgypg" path="res://sprites/forfeit_pressed.png" id="16_5cdry"]
[ext_resource type="StyleBox" uid="uid://ciikkahxcqynr" path="res://styles/style_label_pause.tres" id="16_ixm5t"]
[ext_resource type="Texture2D" uid="uid://dm2nl24gy8gxh" path="res://sprites/accept.png" id="17_0hp27"]
[ext_resource type="Texture2D" uid="uid://ex66wqntm5fi" path="res://sprites/deny.png" id="18_mtr1x"]
[ext_resource type="Texture2D" uid="uid://cr8y6h28hxomx" path="res://sprites/pause_button_pressed.png" id="20_p63tb"]
[ext_resource type="Texture2D" uid="uid://d2ixgtwhalidj" path="res://sprites/mask_accept.png" id="22_f36kt"]
[ext_resource type="Texture2D" uid="uid://d3l22gyjawbxv" path="res://sprites/mask_deny.png" id="24_46d4l"]
[ext_resource type="Texture2D" uid="uid://oc3ekqthmxfl" path="res://sprites/exit_pressed.png" id="27_dp4k2"]
[ext_resource type="Texture2D" uid="uid://boyn6qwdwdd1o" path="res://sprites/accept_pressed.png" id="30_yn8sd"]
[ext_resource type="Texture2D" uid="uid://dg7vk6rgj3o7c" path="res://sprites/deny_pressed.png" id="33_4nel1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wf281"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("8_mwboh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5f6i5"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("8_mwboh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8eq5u"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("11_ay5pf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nnp6g"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("11_ay5pf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_731gk"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("9_63gm5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8i6ds"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("11_1122e")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opdnj"]
draw_center = false
border_width_bottom = 8
border_color = Color(1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4hw3"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("22_f36kt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fbdoa"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("24_46d4l")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rh36y"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("22_f36kt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lcdv6"]
shader = ExtResource("6_hw6d1")
shader_parameter/value = 0.0
shader_parameter/mask = ExtResource("24_46d4l")

[node name="GameControler" type="Node2D"]
script = ExtResource("1_2axsc")

[node name="AIControler" type="Node" parent="."]
script = ExtResource("2_w08l3")

[node name="Attacks" type="RichTextLabel" parent="."]
visible = false
z_index = 30
offset_right = 576.0
offset_bottom = 32.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
scroll_active = false

[node name="GameCamera" type="Camera2D" parent="." node_paths=PackedStringArray("UI", "UIHideable", "PauseMenu", "PlayerInfo", "PlayerActions", "AdvanceTurnButton", "AdvanceActionLight", "AdvanceActionDark", "AdvanceMobilizeLight", "AdvanceMobilizeDark", "EndTurnButton", "ForfeitButton", "PauseButton", "LeaveButton", "TurnOrder", "Attacks", "PowerSprite", "PowerAmount", "CurrentTurn", "CurrentAlignment", "CurrentAction", "VictoryMessage", "DefeatMessage", "LeaveMessage", "ForfeitMessage", "LeftoverMessage", "CommandCallout", "MouseScroll", "AutoPhase", "FastAI", "ActionChangePart", "VisCapitals", "VisUI", "VisTurnOrder", "TooltipActions", "TooltipPhase", "TooltipEndTurn", "TooltipForfeit")]
z_index = 30
script = ExtResource("1_we6ai")
UI = NodePath("UI")
UIHideable = NodePath("UI/Hideable")
PauseMenu = NodePath("UI/pause")
PlayerInfo = NodePath("UI/player_info")
PlayerActions = NodePath("UI/Hideable/PlayerActions")
MapTintList = Array[NodePath]([NodePath("UI/Hideable/Panel"), NodePath("UI/turn_order")])
ActionChangeParticle = ExtResource("4_s5wqb")
AdvanceTurnButton = NodePath("UI/Hideable/PlayerActions/AdvanceTurn")
AdvanceActionLight = NodePath("UI/Hideable/PlayerActions/action_light")
AdvanceActionDark = NodePath("UI/Hideable/PlayerActions/action_dark")
AdvanceMobilizeLight = NodePath("UI/Hideable/PlayerActions/mobilize_light")
AdvanceMobilizeDark = NodePath("UI/Hideable/PlayerActions/mobilize_dark")
EndTurnButton = NodePath("UI/Hideable/PlayerActions/EndTurn")
ForfeitButton = NodePath("UI/Hideable/PlayerActions/Forfeit")
PauseButton = NodePath("UI/gearbox")
LeaveButton = NodePath("UI/pause/leave")
TurnOrder = NodePath("UI/turn_order")
Attacks = NodePath("../Attacks")
PowerSprite = NodePath("UI/Hideable/Power")
PowerAmount = NodePath("UI/Hideable/Power/text")
CurrentTurn = NodePath("UI/Hideable/Turn")
CurrentAlignment = NodePath("UI/Hideable/Alignment")
CurrentAction = NodePath("UI/Hideable/Action")
VictoryMessage = NodePath("UI/win")
DefeatMessage = NodePath("UI/lose")
LeaveMessage = NodePath("UI/leave")
ForfeitMessage = NodePath("UI/forfeit")
LeftoverMessage = NodePath("UI/leftover")
CommandCallout = NodePath("UI/command_callout")
MouseScroll = NodePath("UI/pause/mouse_scroll")
AutoPhase = NodePath("UI/pause/auto_phase")
FastAI = NodePath("UI/pause/fast_ai")
ActionChangePart = NodePath("UI/pause/particles")
VisCapitals = NodePath("UI/pause/vis_capitals")
VisUI = NodePath("UI/pause/vis_ui")
VisTurnOrder = NodePath("UI/pause/vis_turn_order")
TooltipActions = NodePath("UI/Hideable/Tooltips/Actions")
TooltipPhase = NodePath("UI/Hideable/Tooltips/Phase")
TooltipEndTurn = NodePath("UI/Hideable/Tooltips/EndTurn")
TooltipForfeit = NodePath("UI/Hideable/Tooltips/Forfeit")

[node name="UI" type="Control" parent="GameCamera"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2

[node name="command_callout" parent="GameCamera/UI" instance=ExtResource("8_gv3dv")]
layout_mode = 1
offset_left = 288.0
offset_top = -208.0
offset_right = 480.0
offset_bottom = 256.0
right = true

[node name="Hideable" type="Control" parent="GameCamera/UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -320.0
offset_right = 576.0
offset_bottom = 320.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="GameCamera/UI/Hideable"]
show_behind_parent = true
layout_mode = 0
offset_left = 72.0
offset_top = 528.0
offset_right = 1080.0
offset_bottom = 648.0
theme_override_styles/panel = ExtResource("16_ixm5t")

[node name="Alignment" type="Label" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 184.0
offset_top = 552.0
offset_right = 416.0
offset_bottom = 582.0
theme_override_font_sizes/font_size = 24
text = "ALIGNMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Turn" type="Label" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 184.0
offset_top = 584.0
offset_right = 416.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 24
text = "TURN
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerActions" type="Control" parent="GameCamera/UI/Hideable"]
anchors_preset = 0
offset_left = 72.0
offset_top = 528.0
offset_right = 1080.0
offset_bottom = 648.0

[node name="action_light" type="Sprite2D" parent="GameCamera/UI/Hideable/PlayerActions"]
visible = false
material = SubResource("ShaderMaterial_wf281")
position = Vector2(584, 56)
texture = ExtResource("7_biihl")

[node name="action_dark" type="Sprite2D" parent="GameCamera/UI/Hideable/PlayerActions"]
material = SubResource("ShaderMaterial_5f6i5")
position = Vector2(584, 56)
texture = ExtResource("8_2xsaj")

[node name="mobilize_light" type="Sprite2D" parent="GameCamera/UI/Hideable/PlayerActions"]
visible = false
material = SubResource("ShaderMaterial_8eq5u")
position = Vector2(584, 56)
texture = ExtResource("9_onswv")

[node name="mobilize_dark" type="Sprite2D" parent="GameCamera/UI/Hideable/PlayerActions"]
visible = false
material = SubResource("ShaderMaterial_nnp6g")
position = Vector2(584, 56)
texture = ExtResource("10_en7qc")

[node name="AdvanceTurn" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
layout_mode = 0
offset_left = 344.0
offset_top = 24.0
offset_right = 824.0
offset_bottom = 88.0

[node name="EndTurn" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
material = SubResource("ShaderMaterial_731gk")
layout_mode = 0
offset_left = 840.0
offset_top = 24.0
offset_right = 904.0
offset_bottom = 88.0
texture_normal = ExtResource("7_7ft3b")
texture_pressed = ExtResource("13_ac8mv")

[node name="Forfeit" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
material = SubResource("ShaderMaterial_8i6ds")
layout_mode = 0
offset_left = 920.0
offset_top = 24.0
offset_right = 984.0
offset_bottom = 88.0
texture_normal = ExtResource("8_chkrk")
texture_pressed = ExtResource("16_5cdry")

[node name="Tooltips" type="Control" parent="GameCamera/UI/Hideable"]
anchors_preset = 0
offset_left = 72.0
offset_top = 488.0
offset_right = 1080.0
offset_bottom = 528.0
mouse_filter = 2

[node name="Actions" type="Label" parent="GameCamera/UI/Hideable/Tooltips"]
visible = false
layout_mode = 0
offset_left = -8.0
offset_right = 136.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "ACTION AMOUNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Phase" type="Label" parent="GameCamera/UI/Hideable/Tooltips"]
visible = false
layout_mode = 0
offset_left = 512.0
offset_right = 656.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "CHANGE PHASE?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurn" type="Label" parent="GameCamera/UI/Hideable/Tooltips"]
visible = false
layout_mode = 0
offset_left = 816.0
offset_right = 928.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "END TURN?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Forfeit" type="Label" parent="GameCamera/UI/Hideable/Tooltips"]
visible = false
layout_mode = 0
offset_left = 896.0
offset_right = 1008.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "FORFEIT?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Action" type="Label" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 520.0
offset_top = 552.0
offset_right = 896.0
offset_bottom = 616.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
text = "BONUS ACTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Power" type="TextureRect" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 88.0
offset_top = 536.0
offset_right = 184.0
offset_bottom = 632.0
texture = ExtResource("6_duti3")

[node name="text" type="Label" parent="GameCamera/UI/Hideable/Power"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
mouse_filter = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_opdnj")
text = "1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="turn_order" type="Panel" parent="GameCamera/UI"]
layout_mode = 0
offset_left = -512.0
offset_top = -312.0
offset_right = -448.0
offset_bottom = -216.0
pivot_offset = Vector2(0, 96)
theme_override_styles/panel = ExtResource("16_ixm5t")
script = ExtResource("8_y476x")

[node name="gearbox" type="TextureButton" parent="GameCamera/UI"]
layout_mode = 0
offset_left = -512.0
offset_top = -184.0
offset_right = -448.0
offset_bottom = -120.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_6wsra")
texture_pressed = ExtResource("20_p63tb")

[node name="player_info" type="Panel" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -104.0
offset_top = -208.0
offset_right = 104.0
offset_bottom = -88.0
theme_override_styles/panel = ExtResource("7_r48wm")

[node name="Player" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(104, 48)
texture = ExtResource("9_gke1b")
hframes = 6

[node name="City" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(168, 48)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_5d75i")

[node name="Capital" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(40, 48)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_i48c4")

[node name="CityAmount" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 144.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 72.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CapitalAmount" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 16.0
offset_top = 36.0
offset_right = 64.0
offset_bottom = 84.0
text = "1"
horizontal_alignment = 1
clip_text = true

[node name="Name" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 200.0
offset_bottom = 114.0
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="pause" type="Panel" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -448.0
offset_top = -184.0
offset_right = 448.0
offset_bottom = 152.0
theme_override_styles/panel = ExtResource("16_ixm5t")

[node name="leave" type="TextureButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("12_st2cf")
texture_pressed = ExtResource("27_dp4k2")

[node name="mouse_scroll" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 56.0
offset_right = 432.0
offset_bottom = 84.0
focus_mode = 0
text = "Scrolling camera with mouse"

[node name="auto_phase" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 88.0
offset_right = 432.0
offset_bottom = 116.0
focus_mode = 0
text = "Automatic phases"

[node name="fast_ai" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 120.0
offset_right = 432.0
offset_bottom = 148.0
focus_mode = 0
text = "Fast AI"

[node name="particles" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 152.0
offset_right = 432.0
offset_bottom = 180.0
focus_mode = 0
text = "Action change particles"

[node name="vis_capitals" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 216.0
offset_right = 432.0
offset_bottom = 244.0
focus_mode = 0
text = "Capitals visible"

[node name="vis_ui" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 248.0
offset_right = 432.0
offset_bottom = 276.0
focus_mode = 0
text = "UI visible"

[node name="vis_turn_order" type="CheckButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 104.0
offset_top = 280.0
offset_right = 432.0
offset_bottom = 308.0
focus_mode = 0
text = "Turn order visible"

[node name="keys_title" type="Label" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 464.0
offset_top = 24.0
offset_right = 872.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 24
text = "CONTROLS & SHORTCUTS"
clip_text = true

[node name="keys_title2" type="Label" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 112.0
offset_top = 24.0
offset_right = 432.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 24
text = "OPTIONS"
clip_text = true

[node name="keys_title3" type="Label" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 112.0
offset_top = 184.0
offset_right = 432.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 24
text = "TEMPORARY OPTIONS"
clip_text = true

[node name="keys" type="ScrollContainer" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 464.0
offset_top = 56.0
offset_right = 872.0
offset_bottom = 312.0

[node name="text" type="Label" parent="GameCamera/UI/pause/keys"]
layout_mode = 2
text = "Left Click - Interact
Esc  -  Exit


CAMERA
\",\"  -  Zoom out
\".\"  -  Zoom in
\"/\"  -  Reset zoom

Hovering your mouse on the edges
of the window moves the camera.
Arrow Keys  -  Move camera
WASD  -  Move camera
Ctrl + Alt + M  -  Toggle camera scrolling using mouse

Hold shift to move the camera faster.
Hold ctrl to move the camera slower.


GAMEPLAY
Ctrl + Space  -  Next turn phase
Ctrl + Alt + Space  -  End turn
Ctrl + Alt + \"-\"  -  Forfeit
Ctrl + E  -  Highlight your mobilizable cities
Ctrl + Shift + E  -  Highlight enemy mobilizable cities
Ctrl + Alt + P  -  Toggle automatic phases
Ctrl + Alt + Enter  -  Toggle fast AI

Hold Shift when clicking a city while
mobilizing to grab all extra units.


VISUAL
Ctrl + H  -  Toggle capitals
Ctrl + U  -  Toggle UI
Ctrl + T  -  Toggle turn order
Ctrl + A  -  Toggle action change particles"

[node name="win" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -192.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("7_r48wm")
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lose" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -192.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("7_r48wm")
text = "DEFEAT..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="leave" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -112.0
offset_top = -80.0
offset_right = 112.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "Do you want
to leave?"
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="GameCamera/UI/leave"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
material = SubResource("ShaderMaterial_l4hw3")
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 144.0
texture_normal = ExtResource("17_0hp27")
texture_pressed = ExtResource("30_yn8sd")

[node name="no" type="TextureButton" parent="GameCamera/UI/leave"]
modulate = Color(1, 0.717647, 0.698039, 1)
material = SubResource("ShaderMaterial_fbdoa")
layout_mode = 0
offset_left = 128.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 144.0
texture_normal = ExtResource("18_mtr1x")
texture_pressed = ExtResource("33_4nel1")

[node name="forfeit" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -112.0
offset_top = -80.0
offset_right = 112.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "Do you want
to forfeit?
 "
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="GameCamera/UI/forfeit"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
material = SubResource("ShaderMaterial_rh36y")
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 144.0
texture_normal = ExtResource("17_0hp27")
texture_pressed = ExtResource("30_yn8sd")

[node name="no" type="TextureButton" parent="GameCamera/UI/forfeit"]
modulate = Color(1, 0.717647, 0.698039, 1)
material = SubResource("ShaderMaterial_lcdv6")
layout_mode = 0
offset_left = 128.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 144.0
texture_normal = ExtResource("18_mtr1x")
texture_pressed = ExtResource("33_4nel1")

[node name="leftover" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = -144.0
offset_top = -120.0
offset_right = 144.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "You haven't used
all your actions.
End turn anyway?
 "
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="GameCamera/UI/leftover"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
material = SubResource("ShaderMaterial_rh36y")
layout_mode = 0
offset_left = 80.0
offset_top = 136.0
offset_right = 128.0
offset_bottom = 184.0
texture_normal = ExtResource("17_0hp27")
texture_pressed = ExtResource("30_yn8sd")

[node name="no" type="TextureButton" parent="GameCamera/UI/leftover"]
modulate = Color(1, 0.717647, 0.698039, 1)
material = SubResource("ShaderMaterial_lcdv6")
layout_mode = 0
offset_left = 160.0
offset_top = 136.0
offset_right = 208.0
offset_bottom = 184.0
texture_normal = ExtResource("18_mtr1x")
texture_pressed = ExtResource("33_4nel1")

[connection signal="toggled" from="GameCamera/UI/pause/mouse_scroll" to="." method="set_mouse_scroll"]
[connection signal="toggled" from="GameCamera/UI/pause/auto_phase" to="." method="set_auto_phases"]
[connection signal="toggled" from="GameCamera/UI/pause/fast_ai" to="." method="set_speedrun_ai"]
[connection signal="toggled" from="GameCamera/UI/pause/particles" to="." method="set_action_change_particles"]
[connection signal="toggled" from="GameCamera/UI/pause/vis_capitals" to="." method="set_capital_visibility"]
[connection signal="toggled" from="GameCamera/UI/pause/vis_ui" to="GameCamera" method="set_ui_visibility"]
[connection signal="toggled" from="GameCamera/UI/pause/vis_turn_order" to="GameCamera" method="set_turn_order_visibility"]
[connection signal="pressed" from="GameCamera/UI/leave/yes" to="GameCamera" method="_confirmed_leave"]
[connection signal="pressed" from="GameCamera/UI/leave/no" to="GameCamera" method="_not_leaving"]
[connection signal="pressed" from="GameCamera/UI/forfeit/yes" to="GameCamera" method="_forfeit"]
[connection signal="pressed" from="GameCamera/UI/forfeit/no" to="GameCamera" method="_forfeit_hide"]
[connection signal="pressed" from="GameCamera/UI/leftover/yes" to="GameCamera" method="end_turn"]
[connection signal="pressed" from="GameCamera/UI/leftover/no" to="GameCamera" method="_leftover_hide"]
